--- a/LeaveMessage/MessageManageH/HTML/index.html
+++ b/LeaveMessage/MessageManageH/HTML/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="js/JS.js"></script>
 
-    <!--<script src="js/app.js"></script>-->
     <script src="js/jquery.min.js"></script>
 
     <!--外部文件-->
@@ -26,7 +25,7 @@
     <!-------------------------头部---------------------------->
     <div class="top">
         <input type="image" src="img/我.png" title="login" class="icon" onclick="location.href='login.html'"/>
-        <input type="image" src="img/留言.png" title="write" class="icon" onclick="location.href='Write.html'"/>
+        <input type="image" src="img/留言.png" title="write" class="icon" onclick="location.href='login.html'"/>
 
     </div>
     <!----------------------留言板内容-------------------------------->
@@ -73,7 +72,6 @@
         // alert("欢迎进入");
         loading();
     })
-
     //加载留言
     function loading(){
         var html="";
