--- a/LeaveMessage/MessageManageH/HTML/login.html
+++ b/LeaveMessage/MessageManageH/HTML/login.html
@@ -99,20 +99,20 @@
         var user_id = document.getElementById('uid').value;
         var password = document.getElementById('psw').value;
         var url="http://localhost:8080/messagemanage/load?user_id="+user_id;
-        alert("请稍后……");// 异步：这里必须添加一行alert
+        // alert("请稍后……");
         $.ajax({
             url: url,
             type:"get",
             dataType:'json',
             success:
                 function (data) {
-                    alert("正在登陆……");// 异步：这里必须添加一行alert
+                    // alert("正在登陆……");
                     $.each(data.jsonData, function (i, o) {
                         var Ps = o.password;
                         var Ty = o.type;
                         var Na=o.name;
                         if (password != Ps) {
-                            alert("用户不存在或密码错误");
+                            alert("密码错误");
                         }
                         else {
                             if (Ty == 0) {   //写留言界面
@@ -174,7 +174,7 @@
                         //     var Passwo=o.password;
                         //     alert(nametry+Passwo);
                     if (data[0].type == 0) {
-                        alert("注册成功!");
+                        $.msg("注册成功!");
                         }
                     }
                 );
