新增设置留言板字体颜色以及留言板背景色功能。已经解决选择颜色的两个菜单按钮的显示以及切换问题。本次留言审核系统到此结束。

--- a/LeaveMessage/MessageManageH/HTML/Manager.html
+++ b/LeaveMessage/MessageManageH/HTML/Manager.html
@@ -77,13 +77,12 @@
                 function (data){
                     // alert("请稍后");
                     $.each(data.jsonData,function(i,o){
-                        // var messageId=o.messageId;
-                        html+="<tr id='board-content'><td>" +
+                        html+="<tr id='board-content' style='background-color:"+o.background+";color:"+o.fontColor+"'><td>" +
                             "<div class='board-top'>" +
                             "<div class='board-top-left'>" +
                             "<img src='img/小猫.png' class='headshot'/>";
-                        html+=          "<span id='username'>"+o.name+"</span>";
-                        html+=          "<span id='time'>"+o.time+"</span>" +
+                        html+=          "<span id='username' style='color:"+o.fontColor+"'>"+o.name+"</span>";
+                        html+=          "<span id='time' style='color:"+o.fontColor+"'>"+o.time+"</span>" +
                             "</div>";
                         html+=     "<div class='board-top-right'>" +
                             "<input type='image' src='img/叉.png' title='miss' onclick='submitJudge(2,\""+o.messageId+"\")'> " +
@@ -93,6 +92,7 @@
                         html+="<div id='board-incontent'>"+o.message+"</div></td></tr>";
 
                     });
+                    // $("#TextArea").style.color=o.fontColor;
 
                     $("#BoardShow").html(html);
                 }
