--- a/LeaveMessage/MessageManageH/HTML/myBoard.html
+++ b/LeaveMessage/MessageManageH/HTML/myBoard.html
@@ -78,13 +78,13 @@
                     // alert("请稍后");
                     $.each(data.jsonData,function(i,o){
 
-                        html+="<tr id='board-content'><td>" +
+                        html+="<tr id='board-content' style='background-color:"+o.background+";color:"+o.fontColor+"'><td>" +
                             "<div class='board-top'>" +
-                                   "<div class='board-top-left'>" +
-                                        "<img src='img/小猫.png' class='headshot'/>";
-                        html+=          "<span id='username'>"+o.name+"</span>";
-                        html+=          "<span id='time'>"+o.time+"</span>" +
-                                   "</div>";
+                            "<div class='board-top-left'>" +
+                            "<img src='img/小猫.png' class='headshot'/>";
+                        html+=          "<span id='username' style='color:"+o.fontColor+"'>"+o.name+"</span>";
+                        html+=          "<span id='time' style='color:"+o.fontColor+"'>"+o.time+"</span>" +
+                            "</div>";
                         html+=     "<div class='board-top-right'>" +
                                         "<input type='image' src='img/删除.png' title='delete' class='del' onclick='submitJudge(2,\""+o.messageId+"\")'> " +
                                         "<input type='image' src='img/重新编辑.png' title='edit' class='del'>"
